# aqua_robot_ros

./: .gitignore  AquaRobot.ino  AquaRobotArduino.ino  CMakeLists.txt  README.md  package.xml
aqua_robot_arduino_sketch/: AquaRobotArduino.ino  CMakeLists.txt  README.md  package.xml
aqua_robot_arduino_sketch/AquaRobotArduino/: AquaRobotArduino.ino
aqua_robot_arduino_sketch/tools/: upload_to_arduino.sh
aqua_robot_autonomous/: CMakeLists.txt  package.xml
aqua_robot_autonomous/launch/: auto_control.launch  auto_control_debug.launch
aqua_robot_autonomous/src/: aqua_robot_autonomous_node.cpp
aqua_robot_depth_estimate/: CMakeLists.txt  package.xml
aqua_robot_depth_estimate/launch/: position_test.launch
aqua_robot_depth_estimate/msg/: Depth.msg
aqua_robot_depth_estimate/src/: aqua_robot_depth_estimate_node.cpp
aqua_robot_front_camera_imageproc/: CMakeLists.txt  package.xml
aqua_robot_front_camera_imageproc/msg/: Gate.msg
aqua_robot_front_camera_imageproc/src/: aqua_robot_front_camera_imageproc_node.cpp
aqua_robot_line_trace/: CMakeLists.txt  package.xml
aqua_robot_line_trace/msg/: Line2d.msg
aqua_robot_line_trace/src/: aqua_robot_line_trace_node.cpp
aqua_robot_manual_controller/: CMakeLists.txt  LICENSE  README.md  package.xml
aqua_robot_manual_controller/launch/: manual_controller.launch
aqua_robot_manual_controller/rqt/: manual_controller.perspective
aqua_robot_messages/: CMakeLists.txt  package.xml
aqua_robot_messages/msg/: EmergencyModeOrder.msg  MotorVelocity.msg  State.msg
msg/: MotorVelocity.msg  State.msg
(+2 files in other folders)
